--- a/src/fxml/A11.fxml
+++ b/src/fxml/A11.fxml
@@ -2,12 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane prefHeight="400.0" prefWidth="778.0" style="-fx-background-color: beige;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.A11Controller">
    <bottom>
@@ -25,11 +25,11 @@
       </FlowPane>
    </bottom>
    <center>
-      <TableView fx:id="a11Table" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" BorderPane.alignment="CENTER">
+      <TableView fx:id="a11Table" prefHeight="281.0" prefWidth="738.0" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn fx:id="sttCol" editable="false" prefWidth="75.0" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="STT" />
-          <TableColumn fx:id="hotenCol" editable="false" prefWidth="75.0" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="HỌ TÊN" />
-            <TableColumn fx:id="vitriCol" editable="false" prefWidth="75.0" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="VỊ TRÍ ĐẢM NHIỆM" />
+          <TableColumn fx:id="sttCol" editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="STT" />
+          <TableColumn fx:id="hotenCol" editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="HỌ TÊN" />
+            <TableColumn fx:id="vitriCol" editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="VỊ TRÍ ĐẢM NHIỆM" />
         </columns>
          <BorderPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -39,4 +39,14 @@
          </columnResizePolicy>
       </TableView>
    </center>
+   <top>
+      <Label text="BIỂU MẪU A11" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin>
+         <font>
+            <Font name="Consolas Bold" size="16.0" />
+         </font>
+      </Label>
+   </top>
 </BorderPane>
