--- a/src/fxml/ManageColumn.fxml
+++ b/src/fxml/ManageColumn.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="740.0" prefWidth="1190.0" style="-fx-background-color: beige;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ManageColumnController">
+<BorderPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="740.0" prefWidth="1190.0" style="-fx-background-color: beige;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ManageColumnController">
     <bottom>
         <FlowPane alignment="CENTER" prefHeight="163.0" prefWidth="1190.0" style="-fx-background-color: #afaaaa;" BorderPane.alignment="CENTER">
             <children>
