--- a/src/fxml/C11.fxml
+++ b/src/fxml/C11.fxml
@@ -13,7 +13,9 @@
         <columns>
           <TableColumn fx:id="sttCol" editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="STT" />
           <TableColumn fx:id="hotenCol" editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="Tên nhân sự chủ chôt" />
-            <TableColumn fx:id="kncmCol" editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="Kinh nghiệm chuyên môn" />
+            <TableColumn prefWidth="75.0" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="Từ ngày" />
+            <TableColumn prefWidth="75.0" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="Đến ngày" />
+            <TableColumn fx:id="kncmCol" editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: beige; -fx-border-color: #afaaaa;" text="Công ty/Dự án/Chức vụ/&#10;Kinh nghiệm chuyên môn &#10;và quản lý có liên quan" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
