--- a/src/fxml/Forms11.fxml
+++ b/src/fxml/Forms11.fxml
@@ -72,6 +72,17 @@
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
+               <FlowPane.margin>
+                  <Insets right="50.0" />
+               </FlowPane.margin>
+            </Button>
+            <Button fx:id="exportBtn" mnemonicParsing="false" onMouseClicked="#cancel" style="-fx-background-radius: 15;" text="EXPORT TO PDF">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+               <FlowPane.margin>
+                  <Insets left="50.0" />
+               </FlowPane.margin>
             </Button>
          </children>
       </FlowPane>
