--- a/src/fxml/EditCC.fxml
+++ b/src/fxml/EditCC.fxml
@@ -4,95 +4,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxWidth="-Infinity" prefHeight="437.0" prefWidth="301.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EditCCController">
-   <right>
-      <FlowPane maxWidth="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="346.0" prefWidth="166.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets left="2.0" top="2.0" />
-         </BorderPane.margin>
-         <children>
-            <TextField fx:id="tencc" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
-               <FlowPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </FlowPane.margin>
-               <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="mucdo" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
-               <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-               </padding>
-               <FlowPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </FlowPane.margin>
-            </TextField>
-            <CheckBox fx:id="totnghiep" mnemonicParsing="false" prefHeight="26.0">
-               <FlowPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </FlowPane.margin>
-               <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-               </padding>
-            </CheckBox>
-            <TextField fx:id="cosocap" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
-               <FlowPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </FlowPane.margin>
-               <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="cn" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
-               <FlowPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </FlowPane.margin>
-               <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="cm" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
-               <FlowPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </FlowPane.margin>
-               <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="nam" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
-               <FlowPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </FlowPane.margin>
-               <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="hsd" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
-               <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-               </padding>
-               <FlowPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </FlowPane.margin>
-            </TextField>
-            <Label prefHeight="38.0" prefWidth="150.0" text="*để 0 nếu không quy định thời hạn" wrapText="true">
-               <FlowPane.margin>
-                  <Insets left="5.0" right="5.0" top="5.0" />
-               </FlowPane.margin>
-               <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-               </padding>
-               <font>
-                  <Font name="System Italic" size="12.0" />
-               </font>
-            </Label>
-         </children></FlowPane>
-   </right>
+<BorderPane maxWidth="-Infinity" prefHeight="437.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EditCCController">
    <bottom>
       <FlowPane alignment="TOP_CENTER" columnHalignment="CENTER" prefHeight="71.0" prefWidth="359.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -249,4 +167,98 @@
          </BorderPane.margin>
       </FlowPane>
    </left>
+   <center>
+      <FlowPane maxWidth="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="362.0" prefWidth="169.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets left="2.0" top="2.0" />
+         </BorderPane.margin>
+         <children>
+            <TextField fx:id="tencc" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
+               <FlowPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+            </TextField>
+            <TextField fx:id="mucdo" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+               <FlowPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+            </TextField>
+            <CheckBox fx:id="totnghiep" mnemonicParsing="false" prefHeight="26.0">
+               <FlowPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+            </CheckBox>
+            <TextField fx:id="cosocap" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
+               <FlowPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+            </TextField>
+            <TextField fx:id="cn" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
+               <FlowPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+            </TextField>
+            <TextField fx:id="cm" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
+               <FlowPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+            </TextField>
+            <TextField fx:id="nam" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
+               <FlowPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+            </TextField>
+            <TextField fx:id="hsd" maxWidth="-Infinity" prefHeight="26.0" prefWidth="150.0">
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+               <FlowPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+            </TextField>
+            <Label prefHeight="38.0" prefWidth="150.0" text="*để 0 nếu không quy định thời hạn" wrapText="true">
+               <FlowPane.margin>
+                  <Insets left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+         </children></FlowPane>
+   </center>
+   <right>
+      <FlowPane prefHeight="364.0" prefWidth="418.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextArea editable="false" prefHeight="336.0" prefWidth="418.0" text="Hướng dẫn:&#10;- Nếu là bằng tốt nghiệp, tích vào ô tương ứng.&#10;- Nếu là bằng tốt nghiệp thì không cần đến chuyên môn&#10;- (Bắt buộc) Để 0 ở mục hiệu lực đến nếu có hiệu lực vô thời hạn&#10;- Mục Năm cấp và Hiệu lực đến điền năm" wrapText="true">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </TextArea>
+         </children>
+      </FlowPane>
+   </right>
 </BorderPane>
